namespace MCTG;

public enum ElementType
{
    Water,
    Fire,
    Normal
}