namespace MCTG;

internal class MonsterCard : Card
{
    public MonsterCard(string name, int damage, ElementType elementType) : base(name, damage, elementType)
    {
    }

    public override void attack()
    {
        
    }
}