namespace MCTG;

internal class SpellCard : Card
{
    public SpellCard(string name, int damage, ElementType elementType) : base(name, damage, elementType)
    {
    }

    public override void attack()
    {
        
    }
}